Added tools for parsing different parts of URL bugfixes